fix: address PR #3 review feedback from jframe and pinges
- Harden entrypoint.sh temp dir cleanup with EXIT trap
- Read HSM PIN as bytes and zero out after use to avoid immutable
  String in memory
- Remove PKCS#11 provider on plugin stop for clean Ephemery restarts
- Cache PublicKey field instead of recreating lambda per call
- Add null guard for secp256k1 curve params in static initializer
- Add SignatureUtil.toDer() and strengthen tests with signature
  verification, bidirectional ECDH validation, and null CLI option
  checks
- Use SECURITY_MODULE_NAME constant in HsmPluginTest
- Improve exception messages to include key alias

Signed-off-by: Usman Saleem <usman@usmans.info>